--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
-version: '3'
+version: '3.9'
 services:
   web:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "8000:8000"
     volumes:
-      - ./Programa:/var/www/html
+      - ./FastApi:/app/FastApi
+    depends_on:
+      - db
+
   db:
     image: mysql:8
     environment:
@@ -15,3 +18,5 @@ services:
       MYSQL_DATABASE: demo
       MYSQL_USER: user
       MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
