--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r FastApi/requirements.txt
+          pip install -r requirements.txt
 
       # 4. Levantar FastAPI en background
       - name: Start FastAPI server
