--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,10 @@
-version: '3.9'
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
-      - "8000:8000"
+      - "8080:80"
     volumes:
-      - ./FastApi:/app/FastApi
-    depends_on:
-      - db
-
+      - ./Programa:/var/www/html
   db:
     image: mysql:8
     environment:
@@ -18,5 +12,3 @@ services:
       MYSQL_DATABASE: demo
       MYSQL_USER: user
       MYSQL_PASSWORD: password
-    ports:
-      - "3306:3306"
