--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
 version: "3.9"
 
 services:
-  fastapi:
+  web:
     build: .
     ports:
-      - "8000:8000"
-    container_name: fastapi_app
-
-  ngrok:
-    image: wernight/ngrok
+      - "8080:8000"
+    volumes:
+      - ./FastApi:/app   # Mapea tu código para desarrollo
+    working_dir: /app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
-      - fastapi
+      - db
+
+  db:
+    image: mysql:8
     environment:
-      - NGROK_AUTHTOKEN=${NGROK_AUTH_TOKEN}
-      - NGROK_REGION=us
-    command: http fastapi:8000
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: demo
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
