--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,70 @@
-name: Docker + Ngrok v3 Demo
+name: Deploy FastAPI + Ngrok
+
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    # 1️⃣ Clonar el repositorio
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Run Docker containers
-        run: docker compose up -d
+    # 2️⃣ Configurar Python
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: Install Ngrok v3
-        run: |
-          curl -sLo ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.zip
-          unzip -o ngrok.zip
-          sudo mv ngrok /usr/local/bin/
-          sudo chmod +x /usr/local/bin/ngrok
-          ngrok version
-      - name: Authenticate Ngrok
-        run: ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
-      - name: Start Ngrok tunnel
-        id: ngrok
-        run: |
-          ngrok http 8080 --log=stdout > ngrok.log &
-          sleep 5
-          NGROK_URL=$(curl --silent http://127.0.0.1:4040/api/tunnels | grep -oP '"public_url":"\Khttps://[^"]+')
-          echo "NGROK_URL=$NGROK_URL" >> $GITHUB_ENV
-          echo "::notice title=URL pública::$NGROK_URL"
-          tail -f ngrok.log & wait
-      - name: Stop Docker containers
-        if: always()
-        run: docker compose down
+    # 3️⃣ Instalar dependencias
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyngrok uvicorn fastapi
+
+    # 4️⃣ Instalar Ngrok
+    - name: Install Ngrok
+      run: |
+        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc > /dev/null
+        echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+        sudo apt update && sudo apt install -y ngrok jq net-tools
+
+    # 5️⃣ Crear ngrok.yml en la raíz con tu configuración
+    - name: Crear ngrok.yml
+      run: |
+        echo "version: 3" > ngrok.yml
+        echo "agent:" >> ngrok.yml
+        echo "  authtoken: 34CKz6xfNWIcdM0fIIIo38b9sVo_whuep6gXsS3FN5ZhsChA" >> ngrok.yml
+
+    # 6️⃣ Iniciar Ngrok con el archivo de configuración
+    - name: Start Ngrok
+      run: |
+        nohup ngrok http 8000 --config ngrok.yml > ngrok.log 2>&1 &
+        sleep 10
+        NGROK_URL=$(curl --silent http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
+        echo "NGROK_URL=${NGROK_URL}" >> $GITHUB_ENV
+
+    # 7️⃣ Mostrar la URL pública
+    - name: Print Ngrok URL
+      run: echo "Your public URL is ${{ env.NGROK_URL }}"
+
+    # 8️⃣ Iniciar FastAPI en segundo plano
+    - name: Start FastAPI
+      run: |
+        nohup uvicorn FastApi.main:app --host 0.0.0.0 --port 8000 > uvicorn.log 2>&1 &
+        sleep 10
+        echo "FastAPI app running on port 8000"
+
+    # 9️⃣ Debug (opcional)
+    - name: Debug Info
+      run: |
+        echo "Running processes:"
+        ps aux
+        echo "Listening ports:"
+        sudo netstat -tulpn
